<resources>
    <!--Main -->
    <string name="title_main" translatable="false">See what\'s happening in the world right now.</string>
    <string name="log_in" translatable="false">Log in</string>
    <string name="create_account" translatable="false">Create account</string>
    <string name="or" translatable="false">OR</string>
    <string name="cancel" translatable="false">Cancel</string>


    <!-- Log in -->
    <string name="title_login" translatable="false">Welcome</string>
    <string name="email" translatable="false">Email address</string>
    <string name="password" translatable="false">Password</string>
    <string name="forgot_password" translatable="false">Forgot password?</string>
    <string name="description_login" translatable="false">We are happy to see you again. Sign in with your Firebase ID</string>
    //LoginActivity
    <string name="enter_password" translatable="false">Enter password...!</string>


    <!-- Register -->
    <string name="next" translatable="false">Next</string>
    <string name="description" translatable="false">Create an account to connect with friends, family and communities of people who share your interest.</string>
    <string name="title" translatable="false">Join Firebase</string>
    <string name="title_1" translatable="false">What\'s your email?</string>
    <string name="description_1" translatable="false">Enter the email where you can be contacted. No one will be able to see this.</string>
    <string name="name" translatable="false">Name</string>
    <string name="title_2" translatable="false">What\'s your name</string>
    <string name="description_2" translatable="false">Enter your real name.</string>
    <string name="chip_1" translatable="false">At least 8 characters</string>
    <string name="chip_2" translatable="false">Minimum 1  number</string>
    <string name="chip_3" translatable="false">Minimum 1 uppercase</string>
    <string name="chip_4" translatable="false">Minimum 1 symbol</string>
    <string name="chip_5" translatable="false">Minimum 1 lowercase letter</string>
    <string name="i_agree_with_the_terms_and_conditions" translatable="false">I agree with the Terms and Conditions.</string>
    <string name="i_agree_with_the_privacy_policy" translatable="false">I agree with the Privacy Policy.</string>
    <string name="title_3" translatable="false">What\'s your birthday</string>
    <string name="description_3" translatable="false">your date of birth will not be shown publicly.</string>
    <string name="title_4" translatable="false">Create a password</string>
    <string name="description_4" translatable="false">Your password must have at least: 8 characters (20 max), 1 capital letter, 1 number and a special character (such as: # ? ! $ % @).</string>
    <string name="title_5" translatable="false">Agree to Firebase\'s terms and policies</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="get_started" translatable="false">Get started</string>
    <string name="description_6" translatable="false">Creating your account...</string>
    <string name="i_agree" translatable="false">I agree</string>
    //RegisterActivity
    <string name="error_email">Please enter a valid email address.</string>
    <string name="error_name">Please enter your name.</string>
    <string name="error_age" translatable="false">You seem to be entering the wrong information. Please enter your true date of birth.</string>
    <string name="years_old" translatable="false"> Years old</string>
    <string name="year_old" translatable="false"> Year old</string>
    <string name="choose_your_date_of_birth">Choose your date of birth.</string>
    <string name="send_email" translatable="false">The code was sent</string>

    <!-- Terms and Policies -->
    <string name="info_terms_and_policies" translatable="false">By tapping <b>I agree</b>, you agree to create an account and to Firebase\'s <b>Terms</b>, <b>Privacy Policy</b> and <b>Cookies Policy</b>.
    \n\nThe <b>Privacy Policy</b> describes the ways we can use the information we collect when you create an account. For example, we use this information to provide, personalize and improve our products, including ads.</string>

    <!-- Confirm the email -->
    <string name="title_code" translatable="false">Enter the confirmation code</string>
    <string name="description_code" translatable="false">To confirm your account, enter the 6-digit code we sent to \t</string>
    <string name="verification_code" translatable="false">Verification code</string>
    <string name="receive_code" translatable="false">I did not receive the code</string>
    <string name="new_email_title" translatable="false">Enter an email address</string>
    <string name="description_new_description" translatable="false">Enter an email address where you can be contacted. We\'ll send you a code to confirm your account.</string>
    //CodeEmailActivity
    <string name="code_no_correct" translatable="false">The verification key is not correct, please verify and enter again</string>
    <string name="enter_the_code" translatable="false">Enter the code</string>
    <string name="empty_new_email" translatable="false">Enter the new email address</string>
    <string name="email_successfully" translatable="false">Changed email address successfully</string>


    <!-- Complete info user -->
    <string name="choose_from_gallery" translatable="false">Choose from Gallery</string>
    <string name="take_photo" translatable="false">Take photo</string>
    <string name="add_picture" translatable="false">Add picture</string>
    <string name="title_complete" translatable="false">Add a profile picture</string>
    <string name="description_complete" translatable="false">Add profile picture so your friends know it\'s your. Evereyone will be able to see your picture</string>
    <string name="skip" translatable="false">Skip</string>
    <string name="done" translatable="false">Done</string>
    <string name="change_picture" translatable="false">Change picture</string>
    <string name="title_username">Why a username?</string>
    <string name="description_username">So that your friends, family or acquaintances can find you faster. Your username is unique, only you will use it.</string>
    <string name="username">Username</string>
    <string name="welcome_1" translatable="false">Welcome to FirebaseApp,</string>
    <string name="welcome_2" translatable="false">Let\'s start customizing your experience</string>
    //CompleteInfoUserActivity
    <string name="permission_denied" translatable="false">Permission Denied</string>
    <string name="cancelled" translatable="false">Cancelled</string>
    <string name="error_username" translatable="false">Enter your username</string>

    <!-- Settings -->
    <string name="edit_profile" translatable="false">Edit Profile</string>
    <string name="see_your_profile" translatable="false">See your profile</string>
    <string name="saved" translatable="false">Saved</string>
    <string name="recent_calls" translatable="false">Recent calls</string>
    <string name="devices" translatable="false">Devices</string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="privacy_and_security" translatable="false">Privacy and Security</string>
    <string name="data_and_storage" translatable="false">Data and Storage</string>
    <string name="language" translatable="false">Language</string>
    <string name="night_mode" translatable="false">Night Mode</string>
    <string name="firebaseapp_tips">FirebaseApp Tips</string>
    <string name="invite_friends">Invite friends</string>


</resources>